# rust-advent-of-code

./: Cargo.toml
src/: main.rs  template.rs
src/common/: data.rs  grid.rs  mod.rs  read_input_test.txt  solution.rs
src/common/data/: answers.rs  examples.rs  req.rs
src/day01/: mod.rs
src/y2018/: d01.rs  d02.rs  d03.rs  mod.rs
src/y2022/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  mod.rs  template.rs
src/y2023/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  mod.rs  template.rs
