[package]
name = "rust-advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
itertools = "0.10.5"
kuchiki = "0.8.1"
regex = "1.7.0"
serde = "1.0.147"
serde_json = "1.0.88"
ureq = { version = "2.5.0", features = ["json", "serde", "serde_json", "cookies"] }
