[package]
name = "rust-advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
itertools = "0.12.0"
kuchiki = "0.8.1"
nom = "7.1.1"
num = "0.4.1"
regex = "1.7.0"
serde = "1.0.147"
serde_json = "1.0.88"
strsim = "0.10.0"
ureq = { version = "2.5.0", features = [
    "json",
    "serde",
    "serde_json",
    "cookies",
] }
